--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
-        <h2>The crooked house of St. Nicholas <strong>Das krumme Haus vom Nikolaus</strong></h2>
+        <h2>The crooked house of St. Nicholas <strong>RA: 20h 20m 00s | Decl: +40° 15′ 00″</strong></h2>
         <p>
           My very own constellation is the so called crooked house of St. Nicholas. It is in the area of the Cygnus constellation and five of it's six main stars are main stars of the Cygnus constellation. <br>
           The stars (if you exclude β Nik) can be connected with a single line to form the (in germany notorious) house of St. Nicholas.
@@ -193,7 +193,7 @@
     
     <div id="Ursaminor" class="outer">
       <div id="ursaminor" class="constellation">
-        <h2>Ursa Minor (The Little Bear)</h2>
+        <h2>Ursa Minor <strong>RA: 15h 00m 00s | Decl: +75° 00' 00"</strong></h2>
         <div class="svgNtable">
           <object class="sternbild" type="image/svg+xml" data="ursaminor.svg" alt="Ursa Minor Constellation"></object>
           <div class="tableNlegend">
@@ -268,7 +268,7 @@
 
     <div id="Cygnus" class="outer">
       <div id="cygnus" class="constellation">
-        <h2>Cygnus (The Swan)</h2>
+        <h2>Cygnus <strong>RA: 20h 35m 00s | +42° 00' 00"</strong></h2>
         <div class="svgNtable">
           <div class="tableNlegend">
             <table>
@@ -356,7 +356,7 @@
 
     <div id="Lyra" class="outer">
       <div id="lyra" class="constellation">
-        <h2>Lyra (The Lyre)</h2>
+        <h2>Lyra <strong>RA: 19h 00m 00s | Decl: +40° 00' 00"</strong></h2>
         <div class="svgNtable">
           <object class="sternbild" type="image/svg+xml" data="cygnuslyra.svg" alt="Cygnus and Lyra Constellation"></object>
           <div class="tableNlegend">
@@ -414,7 +414,7 @@
 
     <div id="Delpinus" class="outer">
       <div id="delphinus" class="constellation">
-        <h2>Delphinus (The Dolphin)</h2>
+        <h2>Delphinus <strong>RA: 20h 40m 00s | Decl: +13° 45' 00"</strong></h2>
         <div class="svgNtable">
           <div class="tableNlegend">
             <table>
