--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
         flex-grow: 1;
         max-width: 100%;
       }
+
+      .navlink {
+        color: #ffffffcc;
+      }
       
     </style>
   </head>
@@ -102,10 +106,10 @@
 
     <div class="navbar">
       <a href="#topofpage" style="font-weight:600">St. Nicholas</a>
-      <a href="#ursaminor">Ursa Minor</a>
-      <a href="#cygnus">Cygnus</a>
-      <a href="#lyra">Lyra</a>
-      <a href="#delphinus">Delphinus</a>
+      <a class="navlink" href="#ursaminor">Ursa Minor</a>
+      <a class="navlink" href="#cygnus">Cygnus</a>
+      <a class="navlink" href="#lyra">Lyra</a>
+      <a class="navlink" href="#delphinus">Delphinus</a>
     </div>
 
 
@@ -437,7 +441,7 @@
                 <td>Rotanev</td>
                 <td>97 <strong>ly</strong></td>
                 <td>3.63</td>
-                <td>6587 <strong>K</strong></td>
+                <td>6,587 <strong>K</strong></td>
               </tr>
               <tr>
                 <td>γ</td>
@@ -478,10 +482,6 @@
       https://www.stelvision.com/astro/sky-map/<br>
       https://www.theoi.com/greek-mythology/star-myths.html<br>
       https://www.thecollector.com/mythology-behind-famous-constellations/<br>
-    </p>
-    <p>Wikipedia links to stars of my own constellation:<br>
-    Tau Cgyni: https://en.wikipedia.org/wiki/Tau_Cygni
-    
     </p>
   </body>
 </html>
