--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
       .navlink {
         color: #ffffffcc;
       }
+
+      .mythIMG {
+        max-width: 40vw;
+      }
+
+      .myth {
+        display: flex;
+        flex-direction: reverse-column
+      }
+      
       
     </style>
   </head>
