--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
         display: flex;
         flex-direction: reverse-column
       }
+
+      .vismyth {
+        display: block;
+      }
       
       
     </style>
@@ -274,8 +278,10 @@
         </div>
         <div class="myth">
           <img class="mythIMG" src="ursaminormyth.jpg">
-          <p class="visible">Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
-          <p class="myth">The constellation Ursa Minor is often associated with the myth of the nymph Callisto. According to Greek mythology, Callisto, a follower of the goddess Artemis, was turned into a bear by either Zeus' jealous wife Hera or by Artemis herself for breaking her vow of chastity. Later, Zeus placed Callisto in the sky as Ursa Major, and her son, Arcas, became Ursa Minor. As the Little Bear, Ursa Minor represents Arcas, who was transformed to keep him safe. In other versions, it is simply referred to as the smaller bear guiding sailors with its prominent star, Polaris, at the tip of its tail.</p>
+          <div class="vismyth">
+            <p class="visible">Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
+            <p class="myth">The constellation Ursa Minor is often associated with the myth of the nymph Callisto. According to Greek mythology, Callisto, a follower of the goddess Artemis, was turned into a bear by either Zeus' jealous wife Hera or by Artemis herself for breaking her vow of chastity. Later, Zeus placed Callisto in the sky as Ursa Major, and her son, Arcas, became Ursa Minor. As the Little Bear, Ursa Minor represents Arcas, who was transformed to keep him safe. In other versions, it is simply referred to as the smaller bear guiding sailors with its prominent star, Polaris, at the tip of its tail.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -365,8 +371,10 @@
         </div>
         <div class="myth">
           <img class="mythIMG" src="cygnuslyramyth.jpg">
-          <p class="visible">Visible from June to December, Best Months: July to October, with its peak visibility in late summer.</p>
-          <p class="myth">In Greek mythology, Cygnus is linked to several myths, the most popular being the story of the close friends Phaethon and Cygnus. When Phaethon lost control of the Sun’s chariot and crashed into the river Eridanus, Cygnus, overcome with grief, dove repeatedly into the river to retrieve his friend's body. The gods, moved by his loyalty, transformed him into a swan (Cygnus) so he could swim in the river forever. Another myth relates Cygnus to Zeus, who took the form of a swan to seduce Leda, the mother of Helen of Troy.</p>
+          <div class="vismyth">
+            <p class="visible">Visible from June to December, Best Months: July to October, with its peak visibility in late summer.</p>
+            <p class="myth">In Greek mythology, Cygnus is linked to several myths, the most popular being the story of the close friends Phaethon and Cygnus. When Phaethon lost control of the Sun’s chariot and crashed into the river Eridanus, Cygnus, overcome with grief, dove repeatedly into the river to retrieve his friend's body. The gods, moved by his loyalty, transformed him into a swan (Cygnus) so he could swim in the river forever. Another myth relates Cygnus to Zeus, who took the form of a swan to seduce Leda, the mother of Helen of Troy.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -428,8 +436,10 @@
         </div>
         <div class="myth">
           <img class="mythIMG" src="cygnuslyrasmyth.jpg">
-          <p class="visible">Visible from May to December, Best Months: June to September, especially during the summer.</p>
-          <p class="myth">Lyra is associated with the myth of Orpheus, the legendary musician and poet. Orpheus played such beautiful music on his lyre that it could charm anyone, even inanimate objects. When his wife, Eurydice, died, Orpheus traveled to the underworld to retrieve her, using his music to soften the hearts of Hades and Persephone. Though he failed to bring her back, Zeus placed Orpheus’ lyre in the sky as the constellation Lyra, forever honoring his talents and love for Eurydice.</p>
+          <div class="vismyth">
+            <p class="visible">Visible from May to December, Best Months: June to September, especially during the summer.</p>
+            <p class="myth">Lyra is associated with the myth of Orpheus, the legendary musician and poet. Orpheus played such beautiful music on his lyre that it could charm anyone, even inanimate objects. When his wife, Eurydice, died, Orpheus traveled to the underworld to retrieve her, using his music to soften the hearts of Hades and Persephone. Though he failed to bring her back, Zeus placed Orpheus’ lyre in the sky as the constellation Lyra, forever honoring his talents and love for Eurydice.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -491,8 +501,10 @@
         </div>
         <div class="myth">
           <img class="mythIMG" src="delphinusmyth.jpg">
-          <p class="visible">Visible from July to November, Best Months: August to October, particularly in late summer and early fall.</p>
-          <p class="myth">The constellation Delphinus is tied to the story of the Greek poet Arion, a talented lyre player. During a sea voyage, Arion was thrown overboard by greedy sailors who wanted to steal his wealth. As he played a final song on his lyre, a dolphin (delphinus) appeared and carried him safely to shore. Grateful for the dolphin’s kindness, Apollo placed the creature in the sky as the constellation Delphinus. Another myth relates Delphinus to the god Poseidon, who sent a dolphin to fetch the sea nymph Amphitrite and convince her to marry him.</p>
+          <div class="vismyth">
+            <p class="visible">Visible from July to November, Best Months: August to October, particularly in late summer and early fall.</p>
+            <p class="myth">The constellation Delphinus is tied to the story of the Greek poet Arion, a talented lyre player. During a sea voyage, Arion was thrown overboard by greedy sailors who wanted to steal his wealth. As he played a final song on his lyre, a dolphin (delphinus) appeared and carried him safely to shore. Grateful for the dolphin’s kindness, Apollo placed the creature in the sky as the constellation Delphinus. Another myth relates Delphinus to the god Poseidon, who sent a dolphin to fetch the sea nymph Amphitrite and convince her to marry him.</p>
+          </div>
         </div>
       </div>
     </div>
