--- a/test.html
+++ b/test.html
@@ -132,6 +132,12 @@
 
       .seperate {
         max-width: 40vw;
+        display: flex;
+        flex-direction: row;
+      }
+
+      #CygnusLyra {
+        flex-direction: row;
       }
     </style>
   </head>
@@ -318,9 +324,9 @@
           <object class="sternbild" type="image/svg+xml" data="cygnuslyra.svg" alt="Cygnus and Lyra Constellation"></object>
           <img class="mythIMG" src="cygnuslyramyth.jpg">
         </div>
-      </div>
+      
 
-    <div class="seperate">
+    
       <div id="cygnus" class="constellation">
         <div class="svgNtable">
           <div class="tableNlegend">
