--- a/test.html
+++ b/test.html
@@ -131,7 +131,6 @@
       }
 
       .seperate {
-        max-width: 40vw;
         display: flex;
         flex-direction: row;
       }
@@ -139,6 +138,15 @@
       #CygnusLyra {
         flex-direction: row;
       }
+
+      cygnus {
+        max-width: 40vw;
+      }
+
+      lyra {
+        max-width: 40vw;
+      }
+      
     </style>
   </head>
 
