--- a/test.html
+++ b/test.html
@@ -128,11 +128,13 @@
       .common {
         display: flex;
         flex-direction: column;
+        width: 80vw;
       }
 
       .seperate {
         display: flex;
         flex-direction: row;
+        width: 80vw;
       }
 
       #CygnusLyra {
@@ -332,7 +334,7 @@
           <object class="sternbild" type="image/svg+xml" data="cygnuslyra.svg" alt="Cygnus and Lyra Constellation"></object>
           <img class="mythIMG" src="cygnuslyramyth.jpg">
         </div>
-      
+      </div>
 
     <div class="seperate">
       <div id="cygnus" class="constellation">
