--- a/test.html
+++ b/test.html
@@ -139,6 +139,7 @@
 
       #CygnusLyra {
         flex-direction: column;
+        width: 90vw;
       }
 
       cygnus {
@@ -148,7 +149,12 @@
       lyra {
         max-width: 40vw;
       }
-      
+
+      .outerouter {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+      }
     </style>
   </head>
 
@@ -323,7 +329,7 @@
     </div>
 
 <p><br><br><br><br><br></p>
-
+<div class="outerouter">
     <div id="CygnusLyra" class="outer">
       <div class="common">
         <div class="titel">
@@ -482,7 +488,7 @@
       </div>
     </div>
     </div>
-
+</div>
 <p><br><br><br><br><br></p>
     
     <div id="Delpinus" class="outer">
