--- a/test.html
+++ b/test.html
@@ -116,7 +116,7 @@
       }
 
       .titel {
-        diplay: flex;
+        display: flex;
         flex-direction: row;
         justify-content: space-between;
       }
@@ -153,7 +153,12 @@
       .outerouter {
         display: flex;
         flex-direction: row;
-        align-items: center;
+        justify-content: center;
+      }
+
+      .biler {
+        display: flex;
+        justify-content: space-between;
       }
     </style>
   </head>
