--- a/test.html
+++ b/test.html
@@ -156,7 +156,7 @@
         justify-content: center;
       }
 
-      .biler {
+      .bilder {
         display: flex;
         justify-content: space-between;
       }
