--- a/test.html
+++ b/test.html
@@ -128,7 +128,7 @@
       .common {
         display: flex;
         flex-direction: column;
-        width: 80vw;
+        width: 90vw;
       }
 
       .seperate {
@@ -342,7 +342,7 @@
           <h1 style="text-align: right;">Lyra <strong>RA: 19h 00m 00s | Decl: +40° 00' 00"</strong></h1>
         </div>
         <div class="bilder">
-          <object class="sternbild" type="image/svg+xml" data="cygnuslyra.svg" alt="Cygnus and Lyra Constellation"></object>
+          <object style="max-width:40vw;" class="sternbild" type="image/svg+xml" data="cygnuslyra.svg" alt="Cygnus and Lyra Constellation"></object>
           <img class="mythIMG" src="cygnuslyramyth.jpg">
         </div>
       </div>
