--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
           top: 0;
           background-color: rgba(255, 255, 255, 0.05); /* Semi-transparent background */
           backdrop-filter: blur(3px); /* Background blur effect */
-          border-bottom: 1px solid #ffffffb0; /* White line separating navbar */
+          border-bottom: 1px solid #ffffff88; /* White line separating navbar */
           z-index: 1000; /* Ensures the navbar stays on top */
           display: flex;
           justify-content: center;
@@ -135,6 +135,7 @@
         display: flex;
         flex-direction: row;
         width: 90vw;
+        margin-top: 16px;
       }
 
       #CygnusLyra {
@@ -558,7 +559,7 @@
         </div>
       </div>
     </div>
-<p><br><br><br><br><br><br><br><br><br><br></p>
+<p><br><br><br><br><br><br>made by Thorben.<br>No copyrighted material is used in this website.<br><br><br></p>
     <p>
       sources: <br>
       https://theskylive.com/planetarium?objects=sun-moon-mercury-venus-mars-jupiter-saturn-uranus-neptune-pluto&localdata=43.3177%7C-85.1014%7CMichigan%2C%20Vereinigte%20Staaten%20von%20Amerika%7CAmerica%2FDetroit%7C0&obj=sun&h=02&m=29&date=2024-09-09#ra|19.961360314737163|dec|43.211985489160405|fov|41<br>
