--- a/test.html
+++ b/test.html
@@ -172,6 +172,10 @@
         flex-direction: column;
         max-width: 50%;
       }
+
+      p {
+        font-size: 1.5em;
+      }
     </style>
   </head>
 
