--- a/test.html
+++ b/test.html
@@ -83,6 +83,7 @@
       .legend {
         margin: 4px 0px 4px 0px;
         color: #ffffffb0;
+        font-size: 1em;
       }
 
       .sternbild {
@@ -197,7 +198,7 @@
           <div class="nikoNtext">
             <object class="sternbildNIKOLAUS" type="image/svg+xml" data="nikolaus.svg" alt="Nikolaus Constellation"></object>
             <div class="nikotext">
-              <p></p>My very own constellation is the so called crooked house of St. Nicholas. It is in the area of the Cygnus constellation and five of it's six main stars are main stars of the Cygnus constellation. <br>
+              <p>My very own constellation is the so called crooked house of St. Nicholas. It is in the area of the Cygnus constellation and five of it's six main stars are main stars of the Cygnus constellation. <br>
               The stars (if you exclude β Nik) can be connected with a single line to form the (in germany notorious) house of St. Nicholas. This is a very popular riddle for german kids to figure out problem solving and there is even a little rhyme you say while you draw the house. </p>
               <p class="visible">it is Visible from June to December, Best Months: July to October, with its peak visibility in late summer.</p>  
             </div>
