--- a/test.html
+++ b/test.html
@@ -189,6 +189,23 @@
         margin-left: 10vw;
         margin-right: 10vw;
       }
+
+      .rand {
+        margin: 32px;
+        height: fit-content;
+        width: fit-content;
+        border: 1px solid #ffffff44;
+        border-radius: 16px;
+        background-color: #ffffff22;
+      }
+
+      h1 {
+        margin-top: 0px;
+      }
+
+      .legend {
+        margin-bottom: 0px;
+      }
       
     </style>
   </head>
@@ -204,6 +221,8 @@
     </div>
 
 
+
+  <div class="rand">
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
         <h1>The crooked house of St. Nicholas <strong>RA: 20h 20m 00s | Decl: +40° 15′ 00″</strong></h1>
@@ -281,6 +300,7 @@
         </div>    
       </div>
     </div>
+  </div>
 
 
 
