--- a/test.html
+++ b/test.html
@@ -53,7 +53,7 @@
         }
 
         .constellation {
-          width: 80%;
+          width: 80vw;
         }
 
         table {
@@ -191,7 +191,7 @@
       }
 
       .rand {
-        margin: 32px;
+        padding: 32px;
         height: fit-content;
         width: fit-content;
         border: 1px solid #ffffff44;
@@ -206,6 +206,11 @@
       .legend {
         margin-bottom: 0px;
       }
+
+      .randouter {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
       
     </style>
   </head>
@@ -221,7 +226,7 @@
     </div>
 
 
-
+<div id="randouter">
   <div class="rand">
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
@@ -301,7 +306,7 @@
       </div>
     </div>
   </div>
-
+</div>
 
 
 <hr>
