--- a/test.html
+++ b/test.html
@@ -226,7 +226,7 @@
     </div>
 
 
-<div id="randouter">
+<div class="randouter">
   <div class="rand">
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
