--- a/test.html
+++ b/test.html
@@ -186,8 +186,8 @@
         border-right-width: 0px;
         margin-top: 32px;
         margin-bottom: 32px;
-        margin-left: 10vw;
-        margin-right: 10vw;
+        margin-left: calc(10vw - 40px);
+        margin-right: calc(10vw - 40px);
       }
 
       .rand {
@@ -211,7 +211,8 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-      
+      }
+
     </style>
   </head>
 
@@ -628,7 +629,7 @@
     </div>
       <hr>
 <p><br><br><br><br><br><br>made by Thorben.<br>No copyrighted material is used in this website.<br><br><br></p>
-    <p style="max-width: 100vw;">
+    <p style="max-width: 100vw; color: #ffffffcc">
       sources: <br>
       https://theskylive.com/planetarium?objects=sun-moon-mercury-venus-mars-jupiter-saturn-uranus-neptune-pluto&localdata=43.3177%7C-85.1014%7CMichigan%2C%20Vereinigte%20Staaten%20von%20Amerika%7CAmerica%2FDetroit%7C0&obj=sun&h=02&m=29&date=2024-09-09#ra|19.961360314737163|dec|43.211985489160405|fov|41<br>
       Wikipedia (way too many articles to list, https://en.wikipedia.org and https://de.wikipedia.org)<br>
