--- a/test.html
+++ b/test.html
@@ -190,6 +190,11 @@
         margin-right: calc(10vw - 40px);
       }
 
+      .hrALT {
+        margin-left: calc(5vw - 40px);
+        margin-right: calc(5vw - 40px);
+      }
+
       .rand {
         padding: 32px;
         height: fit-content;
@@ -394,7 +399,7 @@
   </div>
 </div>
 
-<hr style="margin-left: 5vw; margin-right: 5vw;">
+<hr class="hrALT">
     <div class="randouter">
   <div class="rand">
 <div class="outerouter">
@@ -560,7 +565,7 @@
   </div>
     </div>
 
-<hr style="margin-left: 5vw; margin-right: 5vw;">
+<hr class="hrALT"
     <div class="randouter">
   <div class="rand">
     <div id="Delpinus" class="outer">
