--- a/test.html
+++ b/test.html
@@ -565,7 +565,7 @@
   </div>
     </div>
 
-<hr class="hrALT"
+<hr class="hrALT">
     <div class="randouter">
   <div class="rand">
     <div id="Delpinus" class="outer">
