--- a/test.html
+++ b/test.html
@@ -231,10 +231,9 @@
       <a class="navlink" href="#delphinus">Delphinus</a>
     </div>
 
-    <p><br></p>
 
 <div class="randouter">
-  <div class="rand">
+  <div class="rand" style="border: 1px solid #ff7000; background-color: #ff7d0008; margin-top: calc(5vw - 40px);">
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
         <h1>The crooked house of St. Nicholas <strong>RA: 20h 20m 00s | Decl: +40° 15′ 00″</strong></h1>
