--- a/test.html
+++ b/test.html
@@ -233,7 +233,7 @@
 
 
 <div class="randouter">
-  <div class="rand" style="border: 1px solid #ff7000; background-color: #ff7d0008; margin-top: calc(5vw - 40px);">
+  <div class="rand" style="border: 1px solid #ff7000; background-color: #ff7d0008; margin-top: calc(5vw + 10px);">
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
         <h1>The crooked house of St. Nicholas <strong>RA: 20h 20m 00s | Decl: +40° 15′ 00″</strong></h1>
@@ -635,8 +635,8 @@
 <p><br><br><br><br><br><br>made by Thorben.<br>No copyrighted material is used in this website.<br><br><br></p>
     <p style="max-width: 100vw; color: #ffffffcc">
       sources: <br>
-      <a rel="https://theskylive.com/planetarium?objects=sun-moon-mercury-venus-mars-jupiter-saturn-uranus-neptune-pluto&localdata=43.3177%7C-85.1014%7CMichigan%2C%20Vereinigte%20Staaten%20von%20Amerika%7CAmerica%2FDetroit%7C0&obj=sun&h=02&m=29&date=2024-09-09#ra|19.961360314737163|dec|43.211985489160405|fov|41">theskylive.com</a>
-      Wikipedia (way too many articles to list, https://en.wikipedia.org and https://de.wikipedia.org)<br>
+      <a href="https://theskylive.com/planetarium?objects=sun-moon-mercury-venus-mars-jupiter-saturn-uranus-neptune-pluto&localdata=43.3177%7C-85.1014%7CMichigan%2C%20Vereinigte%20Staaten%20von%20Amerika%7CAmerica%2FDetroit%7C0&obj=sun&h=02&m=29&date=2024-09-09#ra|19.961360314737163|dec|43.211985489160405|fov|41">theskylive.com</a>
+      <br>Wikipedia (way too many articles to list, https://en.wikipedia.org and https://de.wikipedia.org)<br>
       https://www.wikisky.org/<br>
       https://www.stelvision.com/astro/sky-map/<br>
       https://www.theoi.com/greek-mythology/star-myths.html<br>
