--- a/test.html
+++ b/test.html
@@ -29,16 +29,20 @@
         }
 
         .navbar a {
-          padding: 14px 20px;
+          padding: 10px 10px;
           text-decoration: none;
           color: white;
           text-align: center;
           font-size: 18px;
           transition: background-color 0.3s;
+          margin: 10px 5px;
+          border: 1px solid #ffffff22;
+          border-radius: 8px;
+          background: #ffffff08;
         }
 
         .navbar a:hover {
-          background-color: rgba(255, 255, 255, 0.1); /* Slightly lighter on hover */
+          background-color: #ffffffa0; 
         }
 
         strong {
@@ -233,7 +237,7 @@
 
 
 <div class="randouter">
-  <div class="rand" style="border: 1px solid #ff7000; background-color: #ff7d0008; margin-top: calc(5vw + 10px);">
+  <div class="rand" style="border: 1px solid #ffcf00; background-color: #ffcf0004; margin-top: calc(5vw + 10px);">
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
         <h1>The crooked house of St. Nicholas <strong>RA: 20h 20m 00s | Decl: +40° 15′ 00″</strong></h1>
