--- a/test.html
+++ b/test.html
@@ -20,10 +20,10 @@
         .navbar {
           position: sticky;
           top: 0;
-          background-color: rgba(255, 255, 255, 0.05); /* Semi-transparent background */
-          backdrop-filter: blur(3px); /* Background blur effect */
-          border-bottom: 1px solid #ffffff88; /* White line separating navbar */
-          z-index: 1000; /* Ensures the navbar stays on top */
+          background-color: #ffffff04; 
+          backdrop-filter: blur(3px); 
+          border-bottom: 1px solid #ffffff88; 
+          z-index: 1000; 
           display: flex;
           justify-content: center;
         }
@@ -36,7 +36,7 @@
           font-size: 18px;
           transition: background-color 0.3s;
           margin: 10px 5px;
-          border: 1px solid #ffffff22;
+          border: 1px solid #ffffff0c;
           border-radius: 8px;
           background: #ffffff08;
         }
